--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-12 09:38-0500\n"
+"POT-Creation-Date: 2023-11-12 12:11-0500\n"
 "PO-Revision-Date: 2023-08-27 18:24+0200\n"
 "Last-Translator: Christian Lauinger <christian@lauinger-clan.de>\n"
 "Language-Team: \n"
@@ -210,18 +210,31 @@ msgstr ""
 "Benutzerdefiniertes Proton build um den Northstar-Klient für Titenfall 2 zu "
 "starten."
 
-#: src/models/release.vala:59
+#: src/models/release.vala:60
 msgid "Not available"
 msgstr ""
 
-#~ msgid "Welcome to "
-#~ msgstr "Willkommen zu "
+#.
+#: src/window.vala:112
+msgid "Welcome to "
+msgstr "Willkommen zu "
 
-#~ msgid ""
-#~ "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
-#~ msgstr ""
-#~ "Installieren Sie Steam, Lutris, Bottles oder Heroic Games Launcher, um "
-#~ "loszulegen."
+#: src/window.vala:112
+msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
+msgstr ""
+"Installieren Sie Steam, Lutris, Bottles oder Heroic Games Launcher, um "
+"loszulegen."
+
+#: src/application.vala:62
+#, fuzzy
+msgid "A simple Wine and Proton-based compatibility tools manager for GNOME"
+msgstr ""
+"Ein einfacher Wine und Proton-basierter Kompatibilitätswerkzeugmanager für "
+"GNOME"
+
+#: src/application.vala:68
+msgid "Special thanks to"
+msgstr "Spezieller Dank an"
 
 #~ msgid ""
 #~ "Vulkan based implementation of Direct3D 9, 10 and 11 for Linux/Wine with "
@@ -258,15 +271,6 @@ msgstr ""
 
 #~ msgid "Undo"
 #~ msgstr "Rückgängig"
-
-#, fuzzy
-#~ msgid "A simple Wine and Proton-based compatibility tools manager for GNOME"
-#~ msgstr ""
-#~ "Ein einfacher Wine und Proton-basierter Kompatibilitätswerkzeugmanager "
-#~ "für GNOME"
-
-#~ msgid "Special thanks to"
-#~ msgstr "Spezieller Dank an"
 
 #~ msgid "You cannot close the window while a tool is installing"
 #~ msgstr ""
