--- a/po/es.po
+++ b/po/es.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-27 11:56-0400\n"
+"POT-Creation-Date: 2023-11-12 12:19-0500\n"
 "PO-Revision-Date: 2023-11-05 22:36+0000\n"
 "Last-Translator: gallegonovato <fran-carro@hotmail.es>\n"
 "Language-Team: Spanish <https://hosted.weblate.org/projects/protonplus/"
@@ -13,14 +13,8 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 5.2-dev\n"
 
-#: src/launcher/launcher-warning-box.vala:21
-#msgid "Welcome to "
-#msgstr "Bienvenido a "
-
-#: src/launcher/launcher-warning-box.vala:22
-#msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
-#msgstr "Instala Steam, Lutris, Bottles o Heroic Games Launcher para empezar."
-
+#.
+#.
 #: src/widgets/sidebar.vala:34
 #, fuzzy
 msgid "Installed only"
@@ -133,7 +127,8 @@ msgstr "Herramienta de compatibilidad de Steam para ejecutar juegos de Windows"
 
 #: src/launchers/hgl.vala:11
 msgid "Wine is a program which allows running Microsoft Windows programs"
-msgstr "Wine es un programa que permite ejecutar programas de Microsoft Windows"
+msgstr ""
+"Wine es un programa que permite ejecutar programas de Microsoft Windows"
 
 #: src/launchers/hgl.vala:19 src/launchers/lutris.vala:15
 msgid ""
@@ -226,11 +221,11 @@ msgstr ""
 #.
 #: src/window.vala:112
 msgid "Welcome to "
-msgstr ""
+msgstr "Bienvenido a "
 
 #: src/window.vala:112
 msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
-msgstr ""
+msgstr "Instala Steam, Lutris, Bottles o Heroic Games Launcher para empezar."
 
 #: src/application.vala:62
 msgid "A simple Wine and Proton-based compatibility tools manager for GNOME"
