--- a/po/id.po
+++ b/po/id.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-09-08 17:56-0400\n"
+"POT-Creation-Date: 2024-09-09 01:58+0200\n"
 "PO-Revision-Date: 2024-01-07 02:06+0000\n"
 "Last-Translator: Reza Almanda <rezaalmanda27@gmail.com>\n"
 "Language-Team: Indonesian <https://hosted.weblate.org/projects/protonplus/"
@@ -18,7 +18,8 @@ msgstr ""
 #.
 #.
 #: src/widgets/sidebar.vala:34
-msgid "Installed only"
+#, fuzzy
+msgid "Only Installed"
 msgstr "Hanya terinstal"
 
 #.
@@ -31,7 +32,8 @@ msgid "Load more"
 msgstr "Muat lainnya"
 
 #: src/widgets/info-box.vala:196 src/widgets/info-box.vala:332
-msgid "There was an error while fetching data from the GitHub API"
+#, fuzzy
+msgid "There was an error while fetching data from the GitHub API."
 msgstr "Ada error saat mengambil data dari API GitHub"
 
 #: src/widgets/info-box.vala:214 src/launchers/steam.vala:495
@@ -43,7 +45,8 @@ msgid "Delete the runner"
 msgstr "Hapus runner"
 
 #: src/widgets/info-box.vala:220
-msgid "Are you sure you want to delete "
+#, fuzzy, c-format
+msgid "Are you sure you want to delete %s?"
 msgstr "Apakah Anda yakin ingin menghapusnya "
 
 #: src/widgets/info-box.vala:222
@@ -54,37 +57,34 @@ msgstr "Konfirmasi"
 msgid "Install the runner"
 msgstr "Instal runner"
 
-#: src/widgets/info-box.vala:261 src/widgets/info-box.vala:273
-#: src/widgets/info-box.vala:287 src/launchers/steam.vala:587
-#: src/launchers/steam.vala:612 src/launchers/steam.vala:614
-msgid "The installation of "
+#: src/widgets/info-box.vala:261 src/launchers/steam.vala:614
+#, fuzzy, c-format
+msgid "The installation of %s was cancelled."
 msgstr "Pemasangan "
 
-#: src/widgets/info-box.vala:261 src/launchers/steam.vala:614
-msgid " was cancelled"
-msgstr " dibatalkan"
+#: src/widgets/info-box.vala:273 src/launchers/steam.vala:587
+#, fuzzy, c-format
+msgid "The installation of %s has begun."
+msgstr "Pemasangan "
 
-#: src/widgets/info-box.vala:273 src/launchers/steam.vala:553
-#: src/launchers/steam.vala:587
-msgid " was started"
-msgstr " dimulai"
-
-#: src/widgets/info-box.vala:287 src/widgets/info-box.vala:314
-#: src/launchers/steam.vala:540 src/launchers/steam.vala:578
-#: src/launchers/steam.vala:612
-msgid " is done"
-msgstr " selesai"
+#: src/widgets/info-box.vala:287 src/launchers/steam.vala:612
+#, fuzzy, c-format
+msgid "The installation of %s is complete."
+msgstr "Pemasangan "
 
 #: src/widgets/info-box.vala:314 src/launchers/steam.vala:540
-msgid "The deletion of "
+#, fuzzy, c-format
+msgid "The deletion of %s is complete."
 msgstr "Penghapusan "
 
 #: src/widgets/info-box.vala:335
-msgid "An unexpected error occured while extracting "
+#, fuzzy, c-format
+msgid "An unexpected error occurred while extracting %s."
 msgstr "Terjadi error saat mengekstrak "
 
 #: src/widgets/info-box.vala:338 src/launchers/steam.vala:616
-msgid "An unexpected error occured while installing "
+#, fuzzy, c-format
+msgid "An unexpected error occurred while installing %s."
 msgstr "Terjadi error saat menginstal "
 
 #: src/launchers/bottles.vala:6 src/launchers/steam.vala:6
@@ -92,12 +92,14 @@ msgid "Runners"
 msgstr "Runner"
 
 #: src/launchers/bottles.vala:7
-msgid "Compatibility tool to run Windows games on Linux"
+#, fuzzy
+msgid "Compatibility tool to run Windows games on Linux."
 msgstr "Kompatibilitas alat untuk menjalankan game Windows di Linux"
 
 #: src/launchers/bottles.vala:11 src/launchers/hgl.vala:15
 #: src/launchers/lutris.vala:11
-msgid "Vulkan based implementation of Direct3D 9, 10 and 11 for Linux/Wine"
+#, fuzzy
+msgid "Vulkan based implementation of Direct3D 9, 10 and 11 for Linux/Wine."
 msgstr ""
 "Implementasi berbasis Vulkan dari Direct3D 9, 10 dan 11 untuk Linux / Wine"
 
@@ -122,18 +124,21 @@ msgstr ""
 "lebih baik dalam permainan tertentu."
 
 #: src/launchers/hgl.vala:7
-msgid "Steam compatibility tool for running Windows games"
+#, fuzzy
+msgid "Steam compatibility tool for running Windows games."
 msgstr "Alat kompatibilitas Steam untuk menjalankan game Windows"
 
 #: src/launchers/hgl.vala:11
-msgid "Wine is a program which allows running Microsoft Windows programs"
+#, fuzzy
+msgid "Wine is a program which allows running Microsoft Windows programs."
 msgstr ""
 "Wine adalah program yang memungkinkan menjalankan program Microsoft Windows"
 
 #: src/launchers/hgl.vala:19 src/launchers/lutris.vala:15
+#, fuzzy
 msgid ""
 "Fork of Wine's VKD3D which aims to implement the full Direct3D 12 API on top "
-"of Vulkan"
+"of Vulkan."
 msgstr ""
 "Fork of Wine's VKD3D yang bertujuan untuk mengimplementasikan API Direct3D "
 "12 secara penuh di atas Vulkan"
@@ -159,8 +164,10 @@ msgid ""
 msgstr ""
 
 #: src/launchers/lutris.vala:7
-msgid "Program which allows running Microsoft Windows programs"
+#, fuzzy
+msgid "Program which allows running Microsoft Windows programs."
 msgstr ""
+"Wine adalah program yang memungkinkan menjalankan program Microsoft Windows"
 
 #: src/launchers/lutris.vala:87
 msgid "Contains RTX fix for Star Citizen."
@@ -209,11 +216,11 @@ msgid "Missing dependencies!"
 msgstr ""
 
 #: src/launchers/steam.vala:304
-msgid "You have unmet dependencies for SteamTinkerLaunch"
+msgid "You are missing the following dependencies for SteamTinkerLaunch:"
 msgstr ""
 
 #: src/launchers/steam.vala:304
-msgid "Installation will be cancelled"
+msgid "Installation will be cancelled."
 msgstr ""
 
 #: src/launchers/steam.vala:305 src/launchers/steam.vala:317
@@ -228,7 +235,7 @@ msgstr "Pemasangan "
 
 #: src/launchers/steam.vala:315
 msgid ""
-"It looks like there's a version of STL currently installed which was not "
+"It looks like you currently have another version of STL which was not "
 "installed by ProtonPlus."
 msgstr ""
 
@@ -256,7 +263,7 @@ msgid "Show more information"
 msgstr "Menunjukkan informasi"
 
 #: src/launchers/steam.vala:511
-msgid "Check this to also delete your configuration files"
+msgid "Check this to also delete your configuration files."
 msgstr ""
 
 #: src/launchers/steam.vala:513
@@ -264,7 +271,7 @@ msgid "Delete SteamTinkerLaunch"
 msgstr ""
 
 #: src/launchers/steam.vala:513
-msgid "You're about to delete STL from your system"
+msgid "You're about to delete STL from your system."
 msgstr ""
 
 #: src/launchers/steam.vala:513
@@ -281,22 +288,28 @@ msgid "Yes"
 msgstr ""
 
 #: src/launchers/steam.vala:542
-#, fuzzy
-msgid "An unexpected error occured while deleting "
+#, fuzzy, c-format
+msgid "An unexpected error occurred while deleting %s."
 msgstr "Terjadi error saat mengekstrak "
 
 #: src/launchers/steam.vala:551
-msgid " is already up-to-date"
+#, c-format
+msgid "%s is already up-to-date."
 msgstr ""
 
-#: src/launchers/steam.vala:553 src/launchers/steam.vala:578
-#, fuzzy
-msgid "The upgrade of "
+#: src/launchers/steam.vala:553
+#, fuzzy, c-format
+msgid "The upgrade of %s has begun."
+msgstr "Penghapusan "
+
+#: src/launchers/steam.vala:578
+#, fuzzy, c-format
+msgid "The upgrade of %s is complete."
 msgstr "Penghapusan "
 
 #: src/launchers/steam.vala:580
-#, fuzzy
-msgid "An unexpected error occured while upgrading "
+#, fuzzy, c-format
+msgid "An unexpected error occurred while upgrading %s."
 msgstr "Terjadi error saat mengekstrak "
 
 #: src/launchers/steam.vala:626
@@ -305,8 +318,8 @@ msgstr ""
 
 #: src/launchers/steam.vala:626
 msgid ""
-"To install Steam Tinker Launch for Steam Flatpak, please run the following "
-"command:"
+"To install Steam Tinker Launch for the Steam Flatpak, please run the "
+"following command:"
 msgstr ""
 
 #: src/launchers/steam.vala:629
@@ -314,7 +327,7 @@ msgid "Steam Snap is not supported"
 msgstr ""
 
 #: src/launchers/steam.vala:629
-msgid "There's currently no known way to install STL for Steam Snap"
+msgid "There's currently no known way to install STL for the Steam Snap."
 msgstr ""
 
 #: src/launchers/steam.vala:668
@@ -326,12 +339,13 @@ msgid "Update STL to the latest version"
 msgstr ""
 
 #: src/models/release.vala:63
-msgid "Not available"
+msgid "Not Available"
 msgstr ""
 
 #.
 #: src/window.vala:112
-msgid "Welcome to "
+#, fuzzy, c-format
+msgid "Welcome to %s"
 msgstr "Selamat datang di "
 
 #: src/window.vala:112
@@ -339,12 +353,21 @@ msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
 msgstr "Pasang Steam, Lutris, Bottle atau Peluncur Game Heroic untuk memulai."
 
 #: src/application.vala:65
-msgid "A simple Wine and Proton-based compatibility tools manager for GNOME"
+msgid "A simple Wine and Proton-based compatibility tools manager for GNOME."
 msgstr ""
 
 #: src/application.vala:71
 msgid "Special thanks to"
 msgstr ""
+
+#~ msgid " was cancelled"
+#~ msgstr " dibatalkan"
+
+#~ msgid " was started"
+#~ msgstr " dimulai"
+
+#~ msgid " is done"
+#~ msgstr " selesai"
 
 #~ msgid ""
 #~ " Based on Valve Proton Experimental's bleeding-edge Wine, built for "
