--- a/po/pl.po
+++ b/po/pl.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-09-08 17:56-0400\n"
+"POT-Creation-Date: 2024-09-09 01:58+0200\n"
 "PO-Revision-Date: 2024-08-14 20:09+0000\n"
 "Last-Translator: Eryk Michalak <gnu.ewm@protonmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/protonplus/"
@@ -20,7 +20,8 @@ msgstr ""
 #.
 #.
 #: src/widgets/sidebar.vala:34
-msgid "Installed only"
+#, fuzzy
+msgid "Only Installed"
 msgstr "Tylko zainstalowane"
 
 #.
@@ -33,7 +34,8 @@ msgid "Load more"
 msgstr "Wczytaj więcej"
 
 #: src/widgets/info-box.vala:196 src/widgets/info-box.vala:332
-msgid "There was an error while fetching data from the GitHub API"
+#, fuzzy
+msgid "There was an error while fetching data from the GitHub API."
 msgstr "Wystąpił błąd podczas pobierania danych z API GitHub"
 
 #: src/widgets/info-box.vala:214 src/launchers/steam.vala:495
@@ -45,7 +47,8 @@ msgid "Delete the runner"
 msgstr "Odinstaluj środowisko uruchomieniowe"
 
 #: src/widgets/info-box.vala:220
-msgid "Are you sure you want to delete "
+#, fuzzy, c-format
+msgid "Are you sure you want to delete %s?"
 msgstr "Jesteś pewien, że chcesz usunąć "
 
 #: src/widgets/info-box.vala:222
@@ -56,37 +59,34 @@ msgstr "Potwierdź"
 msgid "Install the runner"
 msgstr "Zainstaluj środowisko uruchomieniowe"
 
-#: src/widgets/info-box.vala:261 src/widgets/info-box.vala:273
-#: src/widgets/info-box.vala:287 src/launchers/steam.vala:587
-#: src/launchers/steam.vala:612 src/launchers/steam.vala:614
-msgid "The installation of "
+#: src/widgets/info-box.vala:261 src/launchers/steam.vala:614
+#, fuzzy, c-format
+msgid "The installation of %s was cancelled."
 msgstr "Instalacja "
 
-#: src/widgets/info-box.vala:261 src/launchers/steam.vala:614
-msgid " was cancelled"
-msgstr " została anulowana"
+#: src/widgets/info-box.vala:273 src/launchers/steam.vala:587
+#, fuzzy, c-format
+msgid "The installation of %s has begun."
+msgstr "Instalacja "
 
-#: src/widgets/info-box.vala:273 src/launchers/steam.vala:553
-#: src/launchers/steam.vala:587
-msgid " was started"
-msgstr " rozpoczęta"
-
-#: src/widgets/info-box.vala:287 src/widgets/info-box.vala:314
-#: src/launchers/steam.vala:540 src/launchers/steam.vala:578
-#: src/launchers/steam.vala:612
-msgid " is done"
-msgstr " została zakończona"
+#: src/widgets/info-box.vala:287 src/launchers/steam.vala:612
+#, fuzzy, c-format
+msgid "The installation of %s is complete."
+msgstr "Instalacja "
 
 #: src/widgets/info-box.vala:314 src/launchers/steam.vala:540
-msgid "The deletion of "
+#, fuzzy, c-format
+msgid "The deletion of %s is complete."
 msgstr "Deinstalacja "
 
 #: src/widgets/info-box.vala:335
-msgid "An unexpected error occured while extracting "
+#, fuzzy, c-format
+msgid "An unexpected error occurred while extracting %s."
 msgstr "Wystąpił nieoczekiwany błąd podczas wypakowywania "
 
 #: src/widgets/info-box.vala:338 src/launchers/steam.vala:616
-msgid "An unexpected error occured while installing "
+#, fuzzy, c-format
+msgid "An unexpected error occurred while installing %s."
 msgstr "Podczas instalacji wystąpił nieoczekiwany błąd "
 
 #: src/launchers/bottles.vala:6 src/launchers/steam.vala:6
@@ -94,12 +94,13 @@ msgid "Runners"
 msgstr ""
 
 #: src/launchers/bottles.vala:7
-msgid "Compatibility tool to run Windows games on Linux"
+#, fuzzy
+msgid "Compatibility tool to run Windows games on Linux."
 msgstr "Narzędzie kompatybilności do uruchamiania gier Windows na Linuxie"
 
 #: src/launchers/bottles.vala:11 src/launchers/hgl.vala:15
 #: src/launchers/lutris.vala:11
-msgid "Vulkan based implementation of Direct3D 9, 10 and 11 for Linux/Wine"
+msgid "Vulkan based implementation of Direct3D 9, 10 and 11 for Linux/Wine."
 msgstr ""
 
 #: src/launchers/bottles.vala:50 src/launchers/hgl.vala:86
@@ -119,17 +120,18 @@ msgid ""
 msgstr ""
 
 #: src/launchers/hgl.vala:7
-msgid "Steam compatibility tool for running Windows games"
+#, fuzzy
+msgid "Steam compatibility tool for running Windows games."
 msgstr "Narzędzie kompatybilności Steam do uruchamiania gier Windows"
 
 #: src/launchers/hgl.vala:11
-msgid "Wine is a program which allows running Microsoft Windows programs"
+msgid "Wine is a program which allows running Microsoft Windows programs."
 msgstr ""
 
 #: src/launchers/hgl.vala:19 src/launchers/lutris.vala:15
 msgid ""
 "Fork of Wine's VKD3D which aims to implement the full Direct3D 12 API on top "
-"of Vulkan"
+"of Vulkan."
 msgstr ""
 
 #: src/launchers/hgl.vala:66 src/launchers/lutris.vala:61
@@ -153,7 +155,7 @@ msgid ""
 msgstr ""
 
 #: src/launchers/lutris.vala:7
-msgid "Program which allows running Microsoft Windows programs"
+msgid "Program which allows running Microsoft Windows programs."
 msgstr ""
 
 #: src/launchers/lutris.vala:87
@@ -207,11 +209,11 @@ msgid "Missing dependencies!"
 msgstr ""
 
 #: src/launchers/steam.vala:304
-msgid "You have unmet dependencies for SteamTinkerLaunch"
+msgid "You are missing the following dependencies for SteamTinkerLaunch:"
 msgstr ""
 
 #: src/launchers/steam.vala:304
-msgid "Installation will be cancelled"
+msgid "Installation will be cancelled."
 msgstr ""
 
 #: src/launchers/steam.vala:305 src/launchers/steam.vala:317
@@ -226,7 +228,7 @@ msgstr "Instalacja "
 
 #: src/launchers/steam.vala:315
 msgid ""
-"It looks like there's a version of STL currently installed which was not "
+"It looks like you currently have another version of STL which was not "
 "installed by ProtonPlus."
 msgstr ""
 
@@ -252,7 +254,7 @@ msgid "Show more information"
 msgstr ""
 
 #: src/launchers/steam.vala:511
-msgid "Check this to also delete your configuration files"
+msgid "Check this to also delete your configuration files."
 msgstr ""
 
 #: src/launchers/steam.vala:513
@@ -260,7 +262,7 @@ msgid "Delete SteamTinkerLaunch"
 msgstr ""
 
 #: src/launchers/steam.vala:513
-msgid "You're about to delete STL from your system"
+msgid "You're about to delete STL from your system."
 msgstr ""
 
 #: src/launchers/steam.vala:513
@@ -277,22 +279,28 @@ msgid "Yes"
 msgstr ""
 
 #: src/launchers/steam.vala:542
-#, fuzzy
-msgid "An unexpected error occured while deleting "
+#, fuzzy, c-format
+msgid "An unexpected error occurred while deleting %s."
 msgstr "Wystąpił nieoczekiwany błąd podczas wypakowywania "
 
 #: src/launchers/steam.vala:551
-msgid " is already up-to-date"
+#, c-format
+msgid "%s is already up-to-date."
 msgstr ""
 
-#: src/launchers/steam.vala:553 src/launchers/steam.vala:578
-#, fuzzy
-msgid "The upgrade of "
+#: src/launchers/steam.vala:553
+#, fuzzy, c-format
+msgid "The upgrade of %s has begun."
+msgstr "Deinstalacja "
+
+#: src/launchers/steam.vala:578
+#, fuzzy, c-format
+msgid "The upgrade of %s is complete."
 msgstr "Deinstalacja "
 
 #: src/launchers/steam.vala:580
-#, fuzzy
-msgid "An unexpected error occured while upgrading "
+#, fuzzy, c-format
+msgid "An unexpected error occurred while upgrading %s."
 msgstr "Wystąpił nieoczekiwany błąd podczas wypakowywania "
 
 #: src/launchers/steam.vala:626
@@ -301,8 +309,8 @@ msgstr ""
 
 #: src/launchers/steam.vala:626
 msgid ""
-"To install Steam Tinker Launch for Steam Flatpak, please run the following "
-"command:"
+"To install Steam Tinker Launch for the Steam Flatpak, please run the "
+"following command:"
 msgstr ""
 
 #: src/launchers/steam.vala:629
@@ -310,7 +318,7 @@ msgid "Steam Snap is not supported"
 msgstr ""
 
 #: src/launchers/steam.vala:629
-msgid "There's currently no known way to install STL for Steam Snap"
+msgid "There's currently no known way to install STL for the Steam Snap."
 msgstr ""
 
 #: src/launchers/steam.vala:668
@@ -322,12 +330,14 @@ msgid "Update STL to the latest version"
 msgstr ""
 
 #: src/models/release.vala:63
-msgid "Not available"
+#, fuzzy
+msgid "Not Available"
 msgstr "Niedostępne"
 
 #.
 #: src/window.vala:112
-msgid "Welcome to "
+#, fuzzy, c-format
+msgid "Welcome to %s"
 msgstr "Witamy "
 
 #: src/window.vala:112
@@ -335,9 +345,18 @@ msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
 msgstr ""
 
 #: src/application.vala:65
-msgid "A simple Wine and Proton-based compatibility tools manager for GNOME"
+msgid "A simple Wine and Proton-based compatibility tools manager for GNOME."
 msgstr ""
 
 #: src/application.vala:71
 msgid "Special thanks to"
 msgstr "Specjalne podziękowania dla"
+
+#~ msgid " was cancelled"
+#~ msgstr " została anulowana"
+
+#~ msgid " was started"
+#~ msgstr " rozpoczęta"
+
+#~ msgid " is done"
+#~ msgstr " została zakończona"
